# Archive-Agent

./: .gitignore  CLAUDE-QdrantSchema.md  CLAUDE-Refactor.md  CLAUDE-TODO.md  CLAUDE.md  Example.md  GEMINI-Parallel-Processing.md  GEMINI.md  README.md  TODO.md  archive-agent.sh  audit.sh  ensure-qdrant.sh  install.sh  macos.md  main.py  manage-qdrant.sh  pyproject.toml  qdrant-rename-paths.py  requirements.txt  setup.cfg  update.sh  v5.0.0-ReleaseNotes.md
.roo/: mcp.json
archive_agent/: __init__.py  __main__.py
archive_agent/ai/: AiManager.py  AiManagerFactory.py  AiResult.py  AiVisionLogic.py
archive_agent/ai/chunk/: AiChunk.py
archive_agent/ai/query/: AiQuery.py
archive_agent/ai/rerank/: AiRerank.py  RerankSchema.py
archive_agent/ai/vision/: AiVision.py  AiVisionEntity.py  AiVisionOCR.py  AiVisionRelation.py  AiVisionSchema.py  VisionSchema.py
archive_agent/ai_provider/: AiProvider.py  AiProviderError.py  AiProviderKeys.py  AiProviderParams.py  LMStudioProvider.py  OllamaProvider.py  OpenAiProvider.py  OpenRouterProvider.py  ai_provider_registry.py
archive_agent/ai_schema/: ChunkSchema.py  QuerySchema.py  RerankSchema.py  VisionSchema.py
archive_agent/config/: ConfigManager.py  DecoderSettings.py  __init__.py
archive_agent/core/: CacheManager.py  CliManager.py  CommitManager.py  ContextManager.py  GuiManager.py  IngestionManager.py  ProgressManager.py  __init__.py  lock.py
archive_agent/data/: ChunkEmbeddingProcessor.py  ChunkManager.py  DocumentContent.py  FileData.py  ProgressManager.py  VisionProcessor.py  __init__.py  chunk.py
archive_agent/data/loader/: PdfDocument.py  image.py  pdf.py  text.py
archive_agent/data/loader/backend/: pdf_pymupdf.py
archive_agent/data/processor/: EmbedProcessor.py  VisionProcessor.py
archive_agent/db/: QdrantManager.py  QdrantSchema.py  __init__.py
archive_agent/loader/: pdf.py  text.py
archive_agent/mcp/: McpServer.py
archive_agent/mcp_server/: McpServer.py
archive_agent/openai_/: OpenAiManager.py  __init__.py
archive_agent/profile/: ProfileManager.py
archive_agent/qdrant_/: QdrantManager.py  __init__.py
archive_agent/schema/: QuerySchema.py  VisionSchema.py  __init__.py
archive_agent/util/: CacheManager.py  CliManager.py  Informer.py  LineTextBuilder.py  PageTextBuilder.py  PrefixedLogger.py  RetryManager.py  StorageManager.py  __init__.py  chunk.py  format.py  image.py  image_debugger.py  image_util.py  json_util.py  knee_detection.py  lock.py  pattern.py  pdf.py  pdf_util.py  text.py  text_split_sentences.py  text_util.py
archive_agent/watchlist/: WatchlistManager.py  __init__.py
test_data/: plaintext_lines.txt  plaintext_test_chunking.html  plaintext_test_chunking.txt  test_combinations_text_image.docx  test_markdown.md  test_text_image.html
test_data/new/: test_lines.txt
tests/core/: test_ProgressManager.py  test_lock.py
tests/data/: test_chunk.py
tests/data/test_data/: test_unsanitized.txt
tests/db/: test_QdrantManager.py  test_QdrantSchema.py  test_payload_integration.py
tests/mcp_server/: test_McpServer.py
tests/util/: test_format.py  test_image.py  test_knee_detection.py  test_pattern.py  test_text.py  test_text_split_sentences.py
tests/util/test_data/: test_sanitized.txt
tests/watchlist/: test_pattern.py
tools/: qdrant-remove-paths-from-context-headers.py  qdrant-rename-paths-in-chunk-metadata.py  qdrant-rename-paths.py
