[tool.poetry]
name = "archive-agent"
version = "3.2.0"
description = "Archive Agent: Smart Indexer with RAG Engine"
authors = ["Dr.-Ing. Paul Wilhelm <paul@wilhelm.dev>"]
readme = "README.md"
packages = [{ include = "archive_agent" }]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
openai = ">=1.69.0,<2.0.0"
qdrant-client = ">=1.13.3,<2.0.0"
typer = ">=0.15.2,<0.16.0"
pillow = ">=11.1.0,<12.0.0"
charset-normalizer = ">=3.4.1,<4.0.0"
rich = ">=14.0.0,<15.0.0"
requests = ">=2.32.3,<3.0.0"
streamlit = ">=1.44.1,<2.0.0"
pypandoc = ">=1.15,<2.0"
pyright = ">=1.1.398,<2.0.0"
pycodestyle = ">=2.13.0,<3.0.0"
spacy = ">=3.8.5,<4.0.0"
pymupdf4llm = ">=0.0.21,<0.0.22"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
mcp = "^1.6.0"
ollama = "^0.4.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"

[tool.poetry.scripts]
archive-agent = "archive_agent.__main__:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=archive_agent --cov-report=term-missing"

[tool.coverage.run]
omit = ["*/__init__.py"]

[tool.coverage.report]
omit = ["*/__init__.py"]
