[project]
name = "archive-agent"
version = "7.1.2"
description = "Find your files with natural language and ask questions."
authors = [
    { name = "Dr.-Ing. Paul Wilhelm", email = "paul@wilhelm.dev" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

dependencies = [
    "pip",  # Needed for spaCy download
    "openai>=1.69.0,<2.0.0",
    "qdrant-client>=1.13.3,<2.0.0",
    "diskcache>=5.6.3,<6.0.0",
    "typer>=0.15.2,<0.16.0",
    "pillow>=11.1.0,<12.0.0",
    "charset-normalizer>=3.4.1,<4.0.0",
    "rich>=14.0.0,<15.0.0",
    "requests>=2.32.3,<3.0.0",
    "streamlit>=1.44.1,<2.0.0",
    "pypandoc>=1.15,<2.0",
    "spacy>=3.8.5,<4.0.0",
    "pymupdf4llm>=0.0.21,<0.0.22",
    "fastapi>=0.115.12,<0.116",
    "uvicorn>=0.34.2,<0.35",
    "mcp>=1.6.0,<1.7",
    "ollama>=0.4.8,<0.5",
    "st-copy-to-clipboard>=0.1.2,<0.2",
    "streamlit-extras>=0.4.3,<0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pyright>=1.1.398,<2.0.0",
    "pycodestyle>=2.13.0,<3.0.0",
]

[project.scripts]
archive-agent = "archive_agent.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"